crates/mlcg_builtin_macros/tests/ui/fail_whitespace_emit_token.stderr
error: instruction `bad` emits token `bad token` containing whitespace
 --> tests/ui/fail_whitespace_emit_token.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/whitespace_emit_token_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
