crates/mlcg_builtin_macros/tests/ui/fail_whitespace_emit_token.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/whitespace_emit_token_manifest.toml");
}

fn main() {}
